# fm_rainbow_log

./: .fmrlrc-invalid.json  .fmrlrc2.json  .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: rust.yml
readme-files/: macos-security.md
src/: beeper.rs  color_type.rs  config_error_rule.rs  config_file.rs  error_rule.rs  lib.rs  main.rs  notifications.rs  utils.rs
src/rules/: de.rs  en.rs  es.rs  fr.rs  it.rs  ja.rs  ko.rs  mod.rs  nl.rs  pt.rs  sv.rs  zh.rs
tests/: cli.rs
