[package]
name = "fmrl"
version = "0.7.1"
edition = "2021"
authors = ["Josh Willing Halpern <josh@willingapps.com>"]
description = "A tool to watch FileMaker Import.log files for changes and colorize the output, highlighting errors and warnings."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
clap_complete = "4.2.1"
colored = "2.0.0"
dirs = "5.0.0"
iso8601 = "0.6.1"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
notify-rust = "4.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
